# WikiFilter

./: .gitignore  WikiFilter.sln  readme.md
.codebuddy/skills/ime-dict-evaluator/: SKILL.md
.codebuddy/skills/ime-dict-evaluator/references/: evaluation-criteria.md
.github/workflows/: process-ci.yml  process-simple.yml  python-app.yml
WikiFilter/: WikiFilter.cpp  WikiFilter.vcxproj  WikiFilter.vcxproj.filters
scripts/: TSCharacters.ocd2  TSPhrases.ocd2  Translation.txt  a2s.json  a2s2.json  blacklist.opencc.txt  blacklist2.opencc.txt  build-wikifilter.sh  dict-tick-preprocess.txt  download-dict.sh  download-release.sh  download-wiki.sh  extract-wiki.sh  filter-wiki.sh  fix_yaml.sh  generate_liuxing.sh  get-wiki-version.py  git_pull_upstream_main.sh  git_push_to_github.sh  liuxingci.sh  merge-result.sh  merge_csv.py  merge_opencc.py  one_line.py  one_line_sources.py  optimize_dict.py  postprocess.bat  process-dict.sh  run-all.sh  setup-env.sh  split_file.py  wiki_utils.py
word_eval/: pyproject.toml  requirements.txt
word_eval/src/word_eval/: __init__.py  __main__.py  cli.py  llm_client.py  parser.py  prompt.py  resume.py  writer.py
word_eval/src/word_eval/prompts/: system.md
